output/dev/if-func3.err
output prefix: llvm/dev/if-func3
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'C'

define i1 @f() {
entry:
  ret i32 1
}

define void @main() {
entry:
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/dev/if-func3.llvm" -o "llvm/dev/if-func3.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/if-func3.llvm:5:7: error: value doesn't match function result type 'i1'
  ret i32 1
      ^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/dev/if-func3.llvm.bc" -o "llvm/dev/if-func3.llvm.s" ... failed (1)
/usr/lib/llvm-3.8/bin/llc: llvm/dev/if-func3.llvm.bc: error: Could not open input file: No such file or directory
linking:gcc -o "llvm/dev/if-func3.llvm.exec" "llvm/dev/if-func3.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... failed (1)
gcc: error: llvm/dev/if-func3.llvm.s: No such file or directory
running:llvm/dev/if-func3.llvm.exec ...Traceback (most recent call last):
  File "/home/rafay/Desktop/decafCompiler/answer/llvm-run", line 172, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", None, out_prefix)
  File "/home/rafay/Desktop/decafCompiler/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/lib/python2.7/subprocess.py", line 523, in call
    return Popen(*popenargs, **kwargs).wait()
  File "/usr/lib/python2.7/subprocess.py", line 711, in __init__
    errread, errwrite)
  File "/usr/lib/python2.7/subprocess.py", line 1340, in _execute_child
    raise child_exception
OSError: [Errno 2] No such file or directory
